@@ -4,6 +4,7 @@ SOAP_12 = 'http://schemas.xmlsoap.org/wsdl/soap12/'
 SOAP_ENV_11 = 'http://schemas.xmlsoap.org/soap/envelope/'
 SOAP_ENV_12 = 'http://www.w3.org/2003/05/soap-envelope'
 
+XSI = 'http://www.w3.org/2001/XMLSchema-instance'
 XSD = 'http://www.w3.org/2001/XMLSchema'
 
 WSDL = 'http://schemas.xmlsoap.org/wsdl/'
