@@ -13,7 +13,7 @@ from zeep.xsd.elements.indicators import OrderIndicator
 from zeep.xsd.types.any import AnyType
 from zeep.xsd.types.simple import AnySimpleType
 from zeep.xsd.utils import NamePrefixGenerator
-from zeep.xsd.valueobjects import CompoundValue
+from zeep.xsd.valueobjects import CompoundValue, ArrayValue
 
 logger = logging.getLogger(__name__)
 
@@ -37,11 +37,20 @@ class ComplexType(AnyType):
         super(ComplexType, self).__init__(qname=qname, is_global=is_global)
 
     def __call__(self, *args, **kwargs):
+        if self._array_type:
+            return self._array_class(*args, **kwargs)
         return self._value_class(*args, **kwargs)
 
     @property
     def accepted_types(self):
         return (self._value_class,) + self._extension_types
+
+    @threaded_cached_property
+    def _array_class(self):
+        assert self._array_type
+        return type(
+            self.__class__.__name__, (ArrayValue,),
+            {'_xsd_type': self, '__module__': 'zeep.objects'})
 
     @threaded_cached_property
     def _value_class(self):
@@ -95,24 +104,28 @@ class ComplexType(AnyType):
         generator = NamePrefixGenerator()
 
         # Handle wsdl:arrayType objects
-        attrs = {attr.qname.text: attr for attr in self._attributes if attr.qname}
-        array_type = attrs.get('{http://schemas.xmlsoap.org/soap/encoding/}arrayType')
-        if array_type:
+        if self._array_type:
             name = generator.get_name()
             if isinstance(self._element, Group):
-                return [(name, Sequence([
-                    Any(max_occurs='unbounded', restrict=array_type.array_type)
+                result = [(name, Sequence([
+                    Any(max_occurs='unbounded', restrict=self._array_type.array_type)
                 ]))]
             else:
-                return [(name, self._element)]
-
-        # _element is one of All, Choice, Group, Sequence
-        if self._element:
-            result.append((generator.get_name(), self._element))
+                result = [(name, self._element)]
+        else:
+            # _element is one of All, Choice, Group, Sequence
+            if self._element:
+                result.append((generator.get_name(), self._element))
         return result
 
+    @property
+    def _array_type(self):
+        attrs = {attr.qname.text: attr for attr in self._attributes if attr.qname}
+        array_type = attrs.get('{http://schemas.xmlsoap.org/soap/encoding/}arrayType')
+        return array_type
+
     def parse_xmlelement(self, xmlelement, schema=None, allow_none=True,
-                         context=None):
+                         context=None, schema_type=None):
         """Consume matching xmlelements and call parse() on each
 
         :param xmlelement: XML element objects
@@ -175,7 +188,11 @@ class ComplexType(AnyType):
                 else:
                     init_kwargs[name] = attribute.parse(attributes)
 
-        return self(**init_kwargs)
+        value = self._value_class(**init_kwargs)
+        schema_type = schema_type or self
+        if schema_type and getattr(schema_type, '_array_type', None):
+            value = schema_type._array_class.from_value_object(value)
+        return value
 
     def render(self, parent, value, xsd_type=None, render_path=None):
         """Serialize the given value lxml.Element subelements on the parent
@@ -187,6 +204,9 @@ class ComplexType(AnyType):
 
         if not self.elements_nested and not self.attributes:
             return
+
+        if isinstance(value, ArrayValue):
+            value = value.as_value_object()
 
         # Render attributes
         for name, attribute in self.attributes:
@@ -244,7 +264,7 @@ class ComplexType(AnyType):
         if value is None:
             return None
 
-        if isinstance(value, list):
+        if isinstance(value, list) and not self._array_type:
             return [self._create_object(val, name) for val in value]
 
         if isinstance(value, CompoundValue) or value is SkipValue:
@@ -367,7 +387,7 @@ class ComplexType(AnyType):
                     new_attributes['##any'] = attr
                 else:
                     new_attributes[attr.qname.text] = attr
-            attributes = new_attributes.values()
+            attributes = list(new_attributes.values())
 
         if base._element:
             base._element.resolve()
